--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <title>Reddit</title>
+  <link rel="stylesheet" charset="utf-8"  href="/src/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" charset="utf-8" href="/src/reddit.css"/>
+</head>
+  <body>
+    <div id="app"></div>
+    <script type="text/javascript" charset="utf-8" src="/out/reddit.js"></script>
+  </body>
+</html>
